crates/parser/src/snapshots/parser__latex__tests__parse@citation__citation_empty.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/citation/citation_empty.txt
---
ROOT@0..7
  PREAMBLE@0..7
    CITATION@0..7
      COMMAND_NAME@0..5 "\\cite"
      CURLY_GROUP_WORD_LIST@5..7
        L_CURLY@5..6 "{"
        R_CURLY@6..7 "}"

