crates/parser/src/snapshots/parser__latex__tests__parse@citation__citation_redundant_comma.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/citation/citation_redundant_comma.txt
---
ROOT@0..12
  PREAMBLE@0..12
    CITATION@0..12
      COMMAND_NAME@0..5 "\\cite"
      CURLY_GROUP_WORD_LIST@5..12
        L_CURLY@5..6 "{"
        COMMA@6..7 ","
        KEY@7..10
          WORD@7..10 "foo"
        COMMA@10..11 ","
        R_CURLY@11..12 "}"

