crates/parser/src/snapshots/parser__latex__tests__parse@citation__citation_star.txt.snap
---
source: crates/parser/src/latex.rs
expression: root
input_file: crates/parser/src/test_data/latex/citation/citation_star.txt
---
ROOT@0..10
  PREAMBLE@0..10
    CITATION@0..10
      COMMAND_NAME@0..7 "\\nocite"
      CURLY_GROUP_WORD_LIST@7..10
        L_CURLY@7..8 "{"
        KEY@8..9
          WORD@8..9 "*"
        R_CURLY@9..10 "}"

